		with left/right arrow based transition movement.
		Fix Show Wave Highlight so it is not dependent on Show Grid.
		Fix negative MSBs on VCD loaders for vectors.
		Fix getpwuid() null pointer exception.
		Add missing recursion case to treenamefix().
		Fix lock/unlock misuse of pthread mutexes across threads.
		Examine	env var	$HOME for home dir on geteuid failure.
		Fix blurring on use_fat_lines rc variable usage.
3.3.106	31jul20	Fix Shift-Up/Down highlight to traverse inside groups.
		Resync ghwlib to handled unbounded arrays.
3.3.107 30sep20 Fix left shift overflow in cvt_fpsudec for fixed point.
		Added Find First One trace type options.
		Fixed bug in Show-Change All Highlighted.
3.3.108	30dec20	Fix VZT writer crash when dumpoff is invoked before first
		timestep.
		Fix convert_ffo() that scanned in wrong direction.
		Fix use	after free in fstapi.c.
3.3.109 10apr21	gtk_ctree_node_moveto bugfix in SST.
		MSVC compiler fix for fstapi.
		Update xml2stems and rtlbrowse to support generate.
3.3.110 22may21 Removed ghwdump and ghwdump.1 from the distribution (now 
		provided with GHDL).
		Fix for when WAVE_GTK3_GESTURE_ZOOM_USES_GTK_PHASE_CAPTURE
		is disabled.
		Integrated blank window fixes from Fedora Core.
		Minor scan-build fixes.
3.3.111	01sep21	Rendering fix for filled rectangles and line caps in Cairo.
		Fix in fstapi for read start limit time.
		Use GtkSearchEntry in SST.
		Convert entrybox to use dialog box.
		Entrybox: use default response instead of signal handler.
		Updated show-change widget.
		Fix xml2stems when begin blocks are in functions.
		Skip over decimal point in timescale in viewer.
3.3.112	04oct22 Bugfix-only release.
		VCD reader fixes for unnamed Icarus begin blocks.
		String data type crash fix in fst.c.
3.3.113	04oct22	Bugfix-only release.
		High CPU utilization when nothing is happening.
3.3.114	23nov22	Buffer overflow fixes in FST reader.
3.3.115	28jan23 Fix VZT reader with -fstrict-aliasing.