@@ -1761,3 +1761,4 @@
 3.3.113	04oct22	Dummy release to keep in sync with gtk3 version.
 3.3.114	23nov22	Buffer overflow fixes in FST reader.
 3.3.115	28jan23	Fix VZT reader with -fstrict-aliasing.
+		Fix use_multi_state condition in vzt_write.c.
